--- a/pages/home.html
+++ b/pages/home.html
@@ -4,26 +4,28 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <link rel="stylesheet" href="./style.css">
-  <title>Dripthan</title>
+  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="../css/home.css">
+  <title>Dripthan - Home</title>
 </head>
 <body>
   <canvas></canvas>
   <div class="wrapper">
     <div class="navbar">
       <ul>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Donate</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="../pages/home.html">Home</a></li>
+        <li><a href="../pages/donate.html">Donate</a></li>
       </ul>
     </div>
     <div class="content">
       <div class="title">
-        <h1>DRIPTHAN</h1>
+        <h3>Introducing:</h3>
+        <h1><span>DRIPTHAN</span></h1>
         <h2>Defy the limits of drip...</h2>
       </div>
     </div>
   </div>
-  <script src="./snow.js" defer></script>
+  <script src="../js/snow.js" defer></script>
+  <script src="../js/showdripthan.js" defer></script>
 </body>
 </html>
